finally fixed horizontal bleeding issue

--- a/styles.css
+++ b/styles.css
@@ -212,6 +212,7 @@ img {
 
 .scroll {
   position: relative;
+  width: 10px;
   left: 50%;
   bottom: 0;
   padding: 2rem, 0;
